--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Мои работы</h1>
     <ul>
         <li><a href="./start-project">Мой первый сайт</a></li>
+        <li><a href="./apple-watch">Вторая работа</a></li>
     </ul>
 </body>
 </html>
