--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./start-project">Мой первый сайт</a></li>
         <li><a href="./apple-watch">Вторая работа</a></li>
+        <li><a href="./blog-posts">Секция с постами блога</a></li>
     </ul>
 </body>
 </html>
