--- a/apple-watch/index.html
+++ b/apple-watch/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Apple Watch</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
-    <h1>Мои работы</h1>
-    <ul>
-        <li><a href="./start-project">Мой первый сайт</a></li>
-        <li><a href="./apple-watch">Вторая работа</a></li>
-        <li><a href="./blog-posts">Секция с постами блога</a></li>
-    </ul>
+    <div class="card">
+        <img src="./img/apple-watch.jpg" alt="Apple Watch" class="card-img">
+        <h4 class="card-title">Apple Watch</h4>
+        <div class="card-text">
+            <p>Смарт-часы Apple Watch Series 3 GPS 38mm с <a href="#!">белым ремешком</a> дополнят стильный образ своего
+                владельца и позволят легко контролировать результаты тренировок, слушать музыку и общаться с друзьями.
+            </p>
+        </div>
+        <div class="price">
+            <span>Цена:</span> 30 000 руб
+        </div>
+        <button type="button" class="button">В корзину</button>
+    </div>
 </body>
+
 </html>
