--- a/start-project/contacts.html
+++ b/start-project/contacts.html
@@ -32,12 +32,12 @@
             <li><a href="#">Instagram</a></li>
             <li><a href="#">Facebook</a></li>
             <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">GitHub</a></li>
+            <li><a href="https://github.com/irinasyrcova">GitHub</a></li>
         </ul>
     </main>
 
     <footer class="footer">
-        <p>© 2021 Сырцова Ирина</p>
+        <p>© 2023 Сырцова Ирина</p>
     </footer>
 </body>
 </html>
