--- a/start-project/portfolio.html
+++ b/start-project/portfolio.html
@@ -29,7 +29,7 @@
             <h3>Верстка макета Форест Тревел</h3>
             <img src="./img/portfolio/forest-travel.jpg" alt="Форест Тревел">
             <p>Верстка многостраничного сайта для турагентства.</p>
-            <a href="#">Смотреть работу</a>
+            <a href="../forest-travel">Смотреть работу</a>
         </article>
         <article>
             <h3>Лендинг мобильного приложения Юнит</h3>
@@ -38,7 +38,7 @@
             <a href="#">Смотреть работу</a>
         </article>
         <article>
-            <h3>Верстка макета Форест Тревел</h3>
+            <h3>Верстка макета Магазин одежды</h3>
             <img src="./img/portfolio/elegance.jpg" alt="Магазин одежды">
             <p>Верстка многостраничного сайта для турагентства.</p>
             <a href="#">Смотреть работу</a>
@@ -46,7 +46,7 @@
     </main>
 
     <footer class="footer">
-        <p>© 2021 Сырцова Ирина</p>
+        <p>© 2023 Сырцова Ирина</p>
     </footer>
 </body>
 </html>
