--- a/forest-travel/tours.html
+++ b/forest-travel/tours.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header-inner">
         <div class="heder-top">
             <div class="logo">ФорестТревел</div>
             <nav class="header-nav">
@@ -27,45 +27,55 @@
                 </ul>
             </nav>
         </div>
-
-        <div class="header-content">
-            <h1 class="header-title">Путешествие всегда хорошая идея</h1>
-            <p>Турпоходы по дикой природе</p>
-        </div>
-
-        <a href="#main" class="header-scroll">cкролл вниз</a>
     </header>
 
-    <main class="main" id="main">
-
+    <main class="inner-page-tours" id="main">
         <div class="container">
-            <div class="main-row">
-                <div class="main-content">
-                    <h2 class="header-2">Популярные направления</h2>
-                    <div class="main-content-text">
-                        <p>Когда <b>Горный Алтай</b> называют второй Швейцарией, алтайцы отвечают, что нужно еще
-                            разобраться, кто тут второй. Чтобы расставить все по местам, отправляйтесь в путешествие по
-                            Чуйскому тракту , по <a href="#!">Горному Алтаю</a> до самой Монголии. 962 км — полный
-                            маршрут <b>Новосибирск—Новоалтайск—Бийск—Майма</b> —государственная граница с Монголией.</p>
-                    </div>
-                    <a href="#!" class="button">Подробнее</a>
-                </div>
-                <div class="main-img"><img src="./img/main-page/img-01.jpg" alt="Популярные направления"></div>
+            <div class="inner-page-tours-header">
+                <h1 class="header-2">Туры и направления</h1>
             </div>
 
-            <div class="main-row">
-                <div class="main-content main-content">
-                    <h2 class="header-2">Впечатляющие маршруты</h2>
-                    <div class="main-content-text">
-                        <p>Вишенкой на торте станет поездка в Национальный парк <b>Порт-Кэмпбелл</b> через Ocean Road,
-                            которая сама по себе стоит визита в <a href="#!">Австралию</a>. Полюбуетесь одной из главных
-                            достопримечательностей страны — скалами, которые до 1922 года были известны в народе как
-                            <b>«Хрюшка и поросята»</b>, а сегодня носят название «Двенадцать апостолов».
-                        </p>
-                    </div>
-                    <a href="#!" class="button">Подробнее</a>
+            <div class="cards-wrapper">
+                <div class="cards-row">
+                    <a href="#!" class="card-link-wrapper card">
+                        <img src="./img/cards/card-01.jpg" alt="Бесплатные туры">
+                        <div class="card-title-wrapper">
+                            <h3 class="card-title">Бесплатные туры</h3>
+                        </div>
+                    </a>
+
+                    <a href="#!" class="card-link-wrapper card extreme-color">
+                        <img src="./img/cards/card-02.jpg" alt="Экстремальный отдых">
+                        <div class="card-title-wrapper">
+                            <h3 class="card-title">Экстремальный отдых</h3>
+                        </div>
+                    </a>
                 </div>
-                <div class="main-img"><img src="./img/main-page/img-02.jpg" alt="Впечатляющие маршруты"></div>
+
+                <div class="cards-row">
+                    <div class="cards-column">
+                        <a href="#!" class="card-link-wrapper card bigger adventures-color">
+                            <img src="./img/cards/card-03.jpg" alt="Невероятные приключения">
+                            <div class="card-title-wrapper">
+                                <h3 class="card-title">Невероятные приключения</h3>
+                            </div>
+                        </a>
+
+                        <a href="#!" class="card-link-wrapper card bigger tracking-color">
+                            <img src="./img/cards/card-04.jpg" alt="Трекинг походы">
+                            <div class="card-title-wrapper">
+                                <h3 class="card-title">Трекинг походы</h3>
+                            </div>
+                        </a>
+                    </div>
+
+                    <a href="#!" class="card-link-wrapper card small jungle-color">
+                        <img src="./img/cards/card-05.jpg" alt="Экзотические джунгли">
+                        <div class="card-title-wrapper">
+                            <h3 class="card-title">Экзотические джунгли</h3>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
