--- a/forest-travel/index.html
+++ b/forest-travel/index.html
@@ -98,7 +98,7 @@
                             <li><a href="#!">Невероятные приключения</a></li>
                             <li><a href="#!">Экстремальный отдых</a></li>
                             <li><a href="#!">Экзотические джунгли</a></li>
-                            <li><a href="#!">Трекинг походы</a></li>
+                            <li><a href="tracking.html">Трекинг походы</a></li>
                         </ul>
                     </div>
 
