--- a/forest-travel/tracking.html
+++ b/forest-travel/tracking.html
@@ -31,51 +31,34 @@
 
     <main class="inner-page">
         <div class="container">
-            <div class="inner-page-tours-header">
-                <h1 class="header-2">Туры и направления</h1>
-            </div>
+            <div class="row-article-page">
+                <nav class="inner-page-nav">
+                    <h3 class="article-page-nav-title">Туры и направления</h3>
+                    <ul class="article-page-nav-list">
+                        <li><a href="#!">Бесплатные туры</a></li>
+                        <li><a href="#!">Невероятные приключения. Пункт длинной в две строки.</a></li>
+                        <li><a href="#!">Экстремальный отдых</a></li>
+                        <li><a href="tracking.html" class="active">Трекинг походы</a></li>
+                        <li><a href="#!">Экзотические джунгли</a></li>
+                    </ul>
+                </nav>
 
-            <div class="cards-wrapper">
-                <div class="cards-row">
-                    <a href="#!" class="card-link-wrapper card">
-                        <img src="./img/cards/card-01.jpg" alt="Бесплатные туры">
-                        <div class="card-title-wrapper">
-                            <h3 class="card-title">Бесплатные туры</h3>
-                        </div>
-                    </a>
+                <article class="article-page-article">
+                    <h1>Трекинг походы</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b>Ut enim ad minim</b> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#!">Duis aute irure</a> dolor in reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <img src="./img/article/tracking.jpg" alt="Трекинг походы">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b>Ut enim ad</b> minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#!">Duis aute irure</a> dolor in reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 
-                    <a href="#!" class="card-link-wrapper card extreme-color">
-                        <img src="./img/cards/card-02.jpg" alt="Экстремальный отдых">
-                        <div class="card-title-wrapper">
-                            <h3 class="card-title">Экстремальный отдых</h3>
-                        </div>
-                    </a>
-                </div>
+                    <h2>Заголовок второго уровня</h2>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    
+                    <h3>Заголовок третьего уровня</h3>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
 
-                <div class="cards-row">
-                    <div class="cards-column">
-                        <a href="#!" class="card-link-wrapper card bigger adventures-color">
-                            <img src="./img/cards/card-03.jpg" alt="Невероятные приключения">
-                            <div class="card-title-wrapper">
-                                <h3 class="card-title">Невероятные приключения</h3>
-                            </div>
-                        </a>
-
-                        <a href="tracking.html" class="card-link-wrapper card bigger tracking-color">
-                            <img src="./img/cards/card-04.jpg" alt="Трекинг походы">
-                            <div class="card-title-wrapper">
-                                <h3 class="card-title">Трекинг походы</h3>
-                            </div>
-                        </a>
-                    </div>
-
-                    <a href="#!" class="card-link-wrapper card small jungle-color">
-                        <img src="./img/cards/card-05.jpg" alt="Экзотические джунгли">
-                        <div class="card-title-wrapper">
-                            <h3 class="card-title">Экзотические джунгли</h3>
-                        </div>
-                    </a>
-                </div>
+                    <h4>Заголовок четвертого уровня</h4>
+                    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt.</p>
+                </article>
             </div>
         </div>
     </main>
