--- a/forest-travel/tracking.html
+++ b/forest-travel/tracking.html
@@ -23,7 +23,7 @@
                     <li class="header-nav-item"><a href="tours.html" class="header-nav-link">Туры и направления</a></li>
                     <li class="header-nav-item"><a href="#!" class="header-nav-link">О компании</a></li>
                     <li class="header-nav-item"><a href="#!" class="header-nav-link">Галерея</a></li>
-                    <li class="header-nav-item"><a href="#!" class="header-nav-link">Контакты</a></li>
+                    <li class="header-nav-item"><a href="contacts.html" class="header-nav-link">Контакты</a></li>
                 </ul>
             </nav>
         </div>
