--- a/forest-travel/index.html
+++ b/forest-travel/index.html
@@ -23,7 +23,7 @@
                     <li class="header-nav-item"><a href="tours.html" class="header-nav-link">Туры и направления</a></li>
                     <li class="header-nav-item"><a href="#!" class="header-nav-link">О компании</a></li>
                     <li class="header-nav-item"><a href="#!" class="header-nav-link">Галерея</a></li>
-                    <li class="header-nav-item"><a href="#!" class="header-nav-link">Контакты</a></li>
+                    <li class="header-nav-item"><a href="contacts.html" class="header-nav-link">Контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,7 +41,8 @@
         <div class="container">
             <div class="main-row">
                 <div class="main-content">
-                    <h2 class="header-2">Популярные направления</h2>
+                    <div class="main-content-header"><h2 class="main-header">Популярные направления</h2></div>
+                    
                     <div class="main-content-text">
                         <p>Когда <b>Горный Алтай</b> называют второй Швейцарией, алтайцы отвечают, что нужно еще
                             разобраться, кто тут второй. Чтобы расставить все по местам, отправляйтесь в путешествие по
@@ -55,7 +56,8 @@
 
             <div class="main-row">
                 <div class="main-content main-content">
-                    <h2 class="header-2">Впечатляющие маршруты</h2>
+                    <div class="main-content-header"><h2 class="main-header">Впечатляющие маршруты</h2></div>
+                    
                     <div class="main-content-text">
                         <p>Вишенкой на торте станет поездка в Национальный парк <b>Порт-Кэмпбелл</b> через Ocean Road,
                             которая сама по себе стоит визита в <a href="#!">Австралию</a>. Полюбуетесь одной из главных
