--- a/forest-travel/tours.html
+++ b/forest-travel/tours.html
@@ -23,7 +23,7 @@
                     <li class="header-nav-item"><a href="tours.html" class="header-nav-link">Туры и направления</a></li>
                     <li class="header-nav-item"><a href="#!" class="header-nav-link">О компании</a></li>
                     <li class="header-nav-item"><a href="#!" class="header-nav-link">Галерея</a></li>
-                    <li class="header-nav-item"><a href="#!" class="header-nav-link">Контакты</a></li>
+                    <li class="header-nav-item"><a href="contacts.html" class="header-nav-link">Контакты</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,7 +32,7 @@
     <main class="inner-page">
         <div class="container">
             <div class="inner-page-tours-header">
-                <h1 class="header-2">Туры и направления</h1>
+                <h1 class="main-header">Туры и направления</h1>
             </div>
 
             <div class="cards-wrapper">
