--- a/forest-travel/404.html
+++ b/forest-travel/404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Туры и направления - агенство Форест Тревел</title>
+    <title>Несуществующая страница - агенство Форест Тревел</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,50 +42,8 @@
     <main class="inner-page">
         <div class="container">
             <div class="inner-page-tours-header">
-                <h1 class="main-header">Туры и направления</h1>
-            </div>
-
-            <div class="cards-wrapper">
-                <div class="cards-row">
-                    <a href="404.html" class="card-link-wrapper card">
-                        <img src="./img/cards/card-01.jpg" alt="Бесплатные туры">
-                        <div class="card-title-wrapper">
-                            <h2 class="card-title">Бесплатные туры</h2>
-                        </div>
-                    </a>
-
-                    <a href="404.html" class="card-link-wrapper card extreme-color">
-                        <img src="./img/cards/card-02.jpg" alt="Экстремальный отдых">
-                        <div class="card-title-wrapper">
-                            <h2 class="card-title">Экстремальный отдых</h2>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="cards-row">
-                    <div class="cards-column">
-                        <a href="404.html" class="card-link-wrapper card bigger adventures-color">
-                            <img src="./img/cards/card-03.jpg" alt="Невероятные приключения">
-                            <div class="card-title-wrapper">
-                                <h2 class="card-title">Невероятные приключения</h2>
-                            </div>
-                        </a>
-
-                        <a href="tracking.html" class="card-link-wrapper card bigger tracking-color">
-                            <img src="./img/cards/card-04.jpg" alt="Трекинг походы">
-                            <div class="card-title-wrapper">
-                                <h2 class="card-title">Трекинг походы</h2>
-                            </div>
-                        </a>
-                    </div>
-
-                    <a href="404.html" class="card-link-wrapper card small jungle-color">
-                        <img src="./img/cards/card-05.jpg" alt="Экзотические джунгли">
-                        <div class="card-title-wrapper">
-                            <h2 class="card-title">Экзотические джунгли</h2>
-                        </div>
-                    </a>
-                </div>
+                <h1 class="main-header">Ошибка 404</h1>
+                <p>Такой страницы не существует. <a href="index.html">Вернитесь на главную.</a></p>
             </div>
         </div>
     </main>
