--- a/forest-travel/contacts.html
+++ b/forest-travel/contacts.html
@@ -5,12 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forest Travel</title>
+    <title>Контакты - агенство Форест Тревел</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=PT+Sans:wght@400;700&display=swap"
         rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./img/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#184c40">
+    <meta name="msapplication-config" content="./img/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body class="bg-color">
@@ -21,8 +31,8 @@
                 <ul class="header-nav-list">
                     <li class="header-nav-item"><a href="index.html" class="header-nav-link">Главная</a></li>
                     <li class="header-nav-item"><a href="tours.html" class="header-nav-link">Туры и направления</a></li>
-                    <li class="header-nav-item"><a href="#!" class="header-nav-link">О компании</a></li>
-                    <li class="header-nav-item"><a href="#!" class="header-nav-link">Галерея</a></li>
+                    <li class="header-nav-item"><a href="404.html" class="header-nav-link">О компании</a></li>
+                    <li class="header-nav-item"><a href="404.html" class="header-nav-link">Галерея</a></li>
                     <li class="header-nav-item"><a href="contacts.html" class="header-nav-link">Контакты</a></li>
                 </ul>
             </nav>
@@ -61,8 +71,8 @@
                 <form class="form">
                     <h3 class="form-title">Заявка на подбор тура</h3>
 
-                    <div class="form-group">
-                        <h4 class="form-group-title">Личные данные</h4>
+                    <fieldset class="form-group">
+                        <legend class="form-group-title">Личные данные</legend>
                         <div class="form-group-row">
                             <input type="text" placeholder="Введите имя" class="input">
                         </div>
@@ -71,10 +81,10 @@
                             <input type="tel" placeholder="Телефон" class="input" required>
                             <input type="email" placeholder="Email" class="input" required>
                         </div>
-                    </div>
+                    </fieldset>
 
-                    <div class="form-group">
-                        <h4 class="form-group-title">Количество человек для тура</h4>
+                    <fieldset class="form-group">
+                        <legend class="form-group-title">Количество человек для тура</legend>
 
                         <label class="radio-row">
                             <input type="radio" class="real-radio" name="number-of-people">
@@ -93,10 +103,10 @@
                             <span class="custom-radio"></span>
                             <span>11 человек и более</span>
                         </label>
-                    </div>
+                    </fieldset>
 
-                    <div class="form-group">
-                        <h4 class="form-group-title">Какие направления вам интересны</h4>
+                    <fieldset class="form-group">
+                        <legend class="form-group-title">Какие направления вам интересны</legend>
 
                         <label class="checkbox-row">
                             <input type="checkbox" class="real-checkbox">
@@ -121,7 +131,7 @@
                             <span class="custom-checkbox"></span>
                             <span>Комбинированные: море, горы, города, лес.</span>
                         </label>
-                    </div>
+                    </fieldset>
 
                     <input type="submit" class="submit-button button" value="Отправить заявку">
                 </form>
@@ -144,19 +154,19 @@
                         <h3 class="footer-wiget-title">Информация</h3>
                         <ul class="footer-widget-list">
                             <li><a href="index.html">Главная</a></li>
-                            <li><a href="#!">О компании</a></li>
-                            <li><a href="#!">Галерея</a></li>
-                            <li><a href="#!">Блог</a></li>
+                            <li><a href="404.html">О компании</a></li>
+                            <li><a href="404.html">Галерея</a></li>
+                            <li><a href="404.html">Блог</a></li>
                         </ul>
                     </div>
 
                     <div class="footer-widget footer-widget-services">
                         <h3 class="footer-wiget-title">Услуги</h3>
                         <ul class="footer-widget-list">
-                            <li><a href="#!">Бесплатные туры</a></li>
-                            <li><a href="#!">Невероятные приключения</a></li>
-                            <li><a href="#!">Экстремальный отдых</a></li>
-                            <li><a href="#!">Экзотические джунгли</a></li>
+                            <li><a href="404.html">Бесплатные туры</a></li>
+                            <li><a href="404.html">Невероятные приключения</a></li>
+                            <li><a href="404.html">Экстремальный отдых</a></li>
+                            <li><a href="404.html">Экзотические джунгли</a></li>
                             <li><a href="tracking.html">Трекинг походы</a></li>
                         </ul>
                     </div>
