--- a/forest-travel/index.html
+++ b/forest-travel/index.html
@@ -5,12 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forest Travel</title>
+    <title>Туристическое агенство Форест Тревел</title>
+    <meta name="description" content="Турпоходы по дикой природе от туристического агенства Форест Тревел в Москве">
+    <meta name="keywords" content="турпоходы, лес, природа, турагенство, Форест Тревел">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=PT+Sans:wght@400;700&display=swap"
         rel="stylesheet">
+    <meta property="og:url" content="https://irinasyrcova.github.io/portfolio/forest-travel/index.html" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Туристическое агентство Форест Тревел" />
+    <meta property="og:description" content="Турпоходы по дикой природе" />
+    <meta property="og:image" content="https://irinasyrcova.github.io/portfolio/forest-travel/img/opengraph.jpg" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./img/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#184c40">
+    <meta name="msapplication-config" content="./img/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -21,8 +38,8 @@
                 <ul class="header-nav-list">
                     <li class="header-nav-item"><a href="index.html" class="header-nav-link">Главная</a></li>
                     <li class="header-nav-item"><a href="tours.html" class="header-nav-link">Туры и направления</a></li>
-                    <li class="header-nav-item"><a href="#!" class="header-nav-link">О компании</a></li>
-                    <li class="header-nav-item"><a href="#!" class="header-nav-link">Галерея</a></li>
+                    <li class="header-nav-item"><a href="404.html" class="header-nav-link">О компании</a></li>
+                    <li class="header-nav-item"><a href="404.html" class="header-nav-link">Галерея</a></li>
                     <li class="header-nav-item"><a href="contacts.html" class="header-nav-link">Контакты</a></li>
                 </ul>
             </nav>
@@ -39,36 +56,41 @@
     <main class="main" id="main">
 
         <div class="container">
-            <div class="main-row">
+            <article class="main-row">
                 <div class="main-content">
-                    <div class="main-content-header"><h2 class="main-header">Популярные направления</h2></div>
-                    
+                    <div class="main-content-header">
+                        <h2 class="main-header">Популярные направления</h2>
+                    </div>
+
                     <div class="main-content-text">
                         <p>Когда <b>Горный Алтай</b> называют второй Швейцарией, алтайцы отвечают, что нужно еще
                             разобраться, кто тут второй. Чтобы расставить все по местам, отправляйтесь в путешествие по
-                            Чуйскому тракту , по <a href="#!">Горному Алтаю</a> до самой Монголии. 962 км — полный
+                            Чуйскому тракту , по <a href="404.html">Горному Алтаю</a> до самой Монголии. 962 км — полный
                             маршрут <b>Новосибирск—Новоалтайск—Бийск—Майма</b> —государственная граница с Монголией.</p>
                     </div>
-                    <a href="#!" class="button">Подробнее</a>
+                    <a href="404.html" class="button">Подробнее</a>
                 </div>
                 <div class="main-img"><img src="./img/main-page/img-01.jpg" alt="Популярные направления"></div>
-            </div>
+            </article>
 
-            <div class="main-row">
+            <article class="main-row">
                 <div class="main-content main-content">
-                    <div class="main-content-header"><h2 class="main-header">Впечатляющие маршруты</h2></div>
-                    
+                    <div class="main-content-header">
+                        <h2 class="main-header">Впечатляющие маршруты</h2>
+                    </div>
+
                     <div class="main-content-text">
                         <p>Вишенкой на торте станет поездка в Национальный парк <b>Порт-Кэмпбелл</b> через Ocean Road,
-                            которая сама по себе стоит визита в <a href="#!">Австралию</a>. Полюбуетесь одной из главных
+                            которая сама по себе стоит визита в <a href="404.html">Австралию</a>. Полюбуетесь одной из
+                            главных
                             достопримечательностей страны — скалами, которые до 1922 года были известны в народе как
                             <b>«Хрюшка и поросята»</b>, а сегодня носят название «Двенадцать апостолов».
                         </p>
                     </div>
-                    <a href="#!" class="button">Подробнее</a>
+                    <a href="404.html" class="button">Подробнее</a>
                 </div>
                 <div class="main-img"><img src="./img/main-page/img-02.jpg" alt="Впечатляющие маршруты"></div>
-            </div>
+            </article>
         </div>
     </main>
 
@@ -87,19 +109,19 @@
                         <h3 class="footer-wiget-title">Информация</h3>
                         <ul class="footer-widget-list">
                             <li><a href="index.html">Главная</a></li>
-                            <li><a href="#!">О компании</a></li>
-                            <li><a href="#!">Галерея</a></li>
-                            <li><a href="#!">Блог</a></li>
+                            <li><a href="404.html">О компании</a></li>
+                            <li><a href="404.html">Галерея</a></li>
+                            <li><a href="404.html">Блог</a></li>
                         </ul>
                     </div>
 
                     <div class="footer-widget footer-widget-services">
                         <h3 class="footer-wiget-title">Услуги</h3>
                         <ul class="footer-widget-list">
-                            <li><a href="#!">Бесплатные туры</a></li>
-                            <li><a href="#!">Невероятные приключения</a></li>
-                            <li><a href="#!">Экстремальный отдых</a></li>
-                            <li><a href="#!">Экзотические джунгли</a></li>
+                            <li><a href="404.html">Бесплатные туры</a></li>
+                            <li><a href="404.html">Невероятные приключения</a></li>
+                            <li><a href="404.html">Экстремальный отдых</a></li>
+                            <li><a href="404.html">Экзотические джунгли</a></li>
                             <li><a href="tracking.html">Трекинг походы</a></li>
                         </ul>
                     </div>
