--- a/forest-travel/tracking.html
+++ b/forest-travel/tracking.html
@@ -5,12 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forest Travel</title>
+    <title>Трекинг походы - агенство Форест Тревел</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=PT+Sans:wght@400;700&display=swap"
         rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="./img/favicon/favicon.ico">
+    <meta name="msapplication-TileColor" content="#184c40">
+    <meta name="msapplication-config" content="./img/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body class="bg-color">
@@ -21,8 +31,8 @@
                 <ul class="header-nav-list">
                     <li class="header-nav-item"><a href="index.html" class="header-nav-link">Главная</a></li>
                     <li class="header-nav-item"><a href="tours.html" class="header-nav-link">Туры и направления</a></li>
-                    <li class="header-nav-item"><a href="#!" class="header-nav-link">О компании</a></li>
-                    <li class="header-nav-item"><a href="#!" class="header-nav-link">Галерея</a></li>
+                    <li class="header-nav-item"><a href="404.html" class="header-nav-link">О компании</a></li>
+                    <li class="header-nav-item"><a href="404.html" class="header-nav-link">Галерея</a></li>
                     <li class="header-nav-item"><a href="contacts.html" class="header-nav-link">Контакты</a></li>
                 </ul>
             </nav>
@@ -35,29 +45,46 @@
                 <nav class="inner-page-nav">
                     <h3 class="article-page-nav-title">Туры и направления</h3>
                     <ul class="article-page-nav-list">
-                        <li><a href="#!">Бесплатные туры</a></li>
-                        <li><a href="#!">Невероятные приключения. Пункт длинной в две строки.</a></li>
-                        <li><a href="#!">Экстремальный отдых</a></li>
+                        <li><a href="404.html">Бесплатные туры</a></li>
+                        <li><a href="404.html">Невероятные приключения. Пункт длинной в две строки.</a></li>
+                        <li><a href="404.html">Экстремальный отдых</a></li>
                         <li><a href="tracking.html" class="active">Трекинг походы</a></li>
-                        <li><a href="#!">Экзотические джунгли</a></li>
+                        <li><a href="404.html">Экзотические джунгли</a></li>
                     </ul>
                 </nav>
 
                 <article class="article-page-article">
                     <h1>Трекинг походы</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b>Ut enim ad minim</b> veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#!">Duis aute irure</a> dolor in reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. <b>Ut enim ad minim</b> veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. <a href="404.html">Duis aute irure</a> dolor in
+                        reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
                     <img src="./img/article/tracking.jpg" alt="Трекинг походы">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <b>Ut enim ad</b> minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="#!">Duis aute irure</a> dolor in reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. <b>Ut enim ad</b> minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. <a href="404.html">Duis aute irure</a> dolor in
+                        reprehenderit <b>in voluptate</b> velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                        est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                        doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                        architecto beatae vitae dicta sunt explicabo.</p>
 
                     <h2>Заголовок второго уровня</h2>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                    
+                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                        est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                        doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                        architecto beatae vitae dicta sunt explicabo.</p>
+
                     <h3>Заголовок третьего уровня</h3>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur
+                        magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
 
                     <h4>Заголовок четвертого уровня</h4>
-                    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt.</p>
+                    <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+                        quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat
+                        voluptatem. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                        doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                        architecto beatae vitae dicta sunt.</p>
                 </article>
             </div>
         </div>
@@ -78,19 +105,19 @@
                         <h3 class="footer-wiget-title">Информация</h3>
                         <ul class="footer-widget-list">
                             <li><a href="index.html">Главная</a></li>
-                            <li><a href="#!">О компании</a></li>
-                            <li><a href="#!">Галерея</a></li>
-                            <li><a href="#!">Блог</a></li>
+                            <li><a href="404.html">О компании</a></li>
+                            <li><a href="404.html">Галерея</a></li>
+                            <li><a href="404.html">Блог</a></li>
                         </ul>
                     </div>
 
                     <div class="footer-widget footer-widget-services">
                         <h3 class="footer-wiget-title">Услуги</h3>
                         <ul class="footer-widget-list">
-                            <li><a href="#!">Бесплатные туры</a></li>
-                            <li><a href="#!">Невероятные приключения</a></li>
-                            <li><a href="#!">Экстремальный отдых</a></li>
-                            <li><a href="#!">Экзотические джунгли</a></li>
+                            <li><a href="404.html">Бесплатные туры</a></li>
+                            <li><a href="404.html">Невероятные приключения</a></li>
+                            <li><a href="404.html">Экстремальный отдых</a></li>
+                            <li><a href="404.html">Экзотические джунгли</a></li>
                             <li><a href="tracking.html">Трекинг походы</a></li>
                         </ul>
                     </div>
