--- a/forest-travel/contacts.html
+++ b/forest-travel/contacts.html
@@ -71,7 +71,7 @@
                 <form class="form">
                     <h3 class="form-title">Заявка на подбор тура</h3>
 
-                    <fieldset class="form-group">
+                    <div class="form-group">
                         <legend class="form-group-title">Личные данные</legend>
                         <div class="form-group-row">
                             <input type="text" placeholder="Введите имя" class="input">
@@ -81,9 +81,9 @@
                             <input type="tel" placeholder="Телефон" class="input" required>
                             <input type="email" placeholder="Email" class="input" required>
                         </div>
-                    </fieldset>
+                    </div>
 
-                    <fieldset class="form-group">
+                    <div class="form-group">
                         <legend class="form-group-title">Количество человек для тура</legend>
 
                         <label class="radio-row">
@@ -103,9 +103,9 @@
                             <span class="custom-radio"></span>
                             <span>11 человек и более</span>
                         </label>
-                    </fieldset>
+                    </div>
 
-                    <fieldset class="form-group">
+                    <div class="form-group">
                         <legend class="form-group-title">Какие направления вам интересны</legend>
 
                         <label class="checkbox-row">
@@ -131,7 +131,7 @@
                             <span class="custom-checkbox"></span>
                             <span>Комбинированные: море, горы, города, лес.</span>
                         </label>
-                    </fieldset>
+                    </div>
 
                     <input type="submit" class="submit-button button" value="Отправить заявку">
                 </form>
