--- a/forest-travel/index.html
+++ b/forest-travel/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Турпоходы по дикой природе от туристического агенства Форест Тревел в Москве">
     <meta name="keywords" content="турпоходы, лес, природа, турагенство, Форест Тревел">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/media.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=PT+Sans:wght@400;700&display=swap"
@@ -32,7 +33,7 @@
 
 <body>
     <header class="header">
-        <div class="heder-top">
+        <div class="header-top">
             <div class="logo">ФорестТревел</div>
             <nav class="header-nav">
                 <ul class="header-nav-list">
@@ -42,6 +43,7 @@
                     <li class="header-nav-item"><a href="404.html" class="header-nav-link">Галерея</a></li>
                     <li class="header-nav-item"><a href="contacts.html" class="header-nav-link">Контакты</a></li>
                 </ul>
+                <button class="header-nav-button"><img src="./img/header/menu.svg" alt="Menu button"></button>
             </nav>
         </div>
 
