--- a/forest-travel/index.html
+++ b/forest-travel/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <div class="footer-widgets-wrapper">
                     <div class="footer-widget footer-widget-info">
-                        <h3 class="footer-wiget-title">Информация</h3>
+                        <h3 class="footer-widget-title">Информация</h3>
                         <ul class="footer-widget-list">
                             <li><a href="index.html">Главная</a></li>
                             <li><a href="404.html">О компании</a></li>
@@ -118,7 +118,7 @@
                     </div>
 
                     <div class="footer-widget footer-widget-services">
-                        <h3 class="footer-wiget-title">Услуги</h3>
+                        <h3 class="footer-widget-title">Услуги</h3>
                         <ul class="footer-widget-list">
                             <li><a href="404.html">Бесплатные туры</a></li>
                             <li><a href="404.html">Невероятные приключения</a></li>
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="footer-widget footer-widget-contacts">
-                        <h3 class="footer-wiget-title">Контакты</h3>
+                        <h3 class="footer-widget-title">Контакты</h3>
                         <p>+7 (905) 555-55-55</p>
                         <p>info@foresttravel.com</p>
                         <p>г. Москва, Рязанский проспект 54, офис 112.</p>
