--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="./apple-watch">Карточка продукта</a></li>
         <li><a href="./blog-posts">Секция с постами блога</a></li>
         <li><a href="./forest-travel">ФорестТревел</a></li>
-        <li><a href="./bem-naming/"></a>BEM naming</li>
+        <li><a href="./bem-naming"></a>BEM naming</li>
     </ul>
 </body>
 
