--- a/bem-naming/index.html
+++ b/bem-naming/index.html
@@ -24,7 +24,7 @@
 
                     <div class="product__description">
                         <div class="product__title">
-                            <h2 class="main__title">Apple MacBook Air 13</h2>
+                            <h2 class="header">Apple MacBook Air 13</h2>
                         </div>
 
                         <div class="product__price">190 000 <span>руб.</span></div>
@@ -51,7 +51,7 @@
         <section class="other-products">
             <div class="section__container">
                 <div class="other-products__title">
-                    <h2 class="other-products__header">Смотрите также</h2>
+                    <h2 class="header">Смотрите также</h2>
                 </div>
 
                 <div class="other-products__cards">
