--- a/forest-travel/tours.html
+++ b/forest-travel/tours.html
@@ -25,7 +25,7 @@
 
 <body class="bg-color">
     <header class="header-inner">
-        <div class="heder-top">
+        <div class="header-top">
             <div class="logo">ФорестТревел</div>
             <nav class="header-nav">
                 <ul class="header-nav-list">
